portfolio/style.css
/* ... */
@font-face {
  font-weight: bold;
  font-family: "Merriweather";
  src: url("./assets/fonts/Merriweather-Bold.ttf");
}

@font-face {
  font-family: "Inter";
  src: url("./assets/fonts/Inter-VariableFont_slnt,wght.ttf");
}

/* Обнуление стилей */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;
}

a {
  text-decoration: none;
}

ul,
ol,
li {
  list-style: none;
}

img {
  vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: inherit;
  font-size: inherit;
}

html {
  height: 100%;
  font-size: 20px;
  line-height: 1;
  font-family: "Inter", sans-serif;
  scroll-behavior: smooth;
}

/* Общие стили */

ul {
  line-height: 2;
}

li {
  display: block;
  text-align: center;
}

button {
  width: 220px;
  height: 55px;
  padding: 0;
  font-size: 20px;
  font-family: inherit;
  border: none;
  cursor: pointer;
  transition: 0.3s;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

h1,
h2 {
  font-weight: bold;
  font-family: "Merriweather", serif;
}

h1 {
  font-size: 60px;
  color: inherit;
}

h2 {
  font-size: 40px;
  color: #bdae82;
}

@media (max-width: 768px) {
  h2 {
    font-size: 32px;
    line-height: 1.25;
  }
}

.body {
  color: #ffffff;
  background-color: #000000;
}

.body.light-theme {
  color: #1c1c1c;
  background-color: #ffffff;
}

.container,
.header-container,
.hero-container,
.footer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1440px;
  margin: 0 auto;
  padding: 0 20px;
}

@media (max-width: 768px) {
  .container,
  .header-container,
  .hero-container,
  .footer-container {
    padding: 0 60px;
  }

  .container {
    margin-top: -90px;
    padding-bottom: 35px;
  }
}

/* HEADER */
.header {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
}

.logo {
  width: 50px;
  height: 40px;
  background-image: url("./assets/svg/logo.svg");
  background-repeat: no-repeat;
  background-size: contain;
  transition: 0.3s;
}

.header-container.light-theme .logo {
  background-image: url("./assets/svg/logo-black.svg");
}

a,
.footer-link,
.social-icon {
  color: unset;
  transition: 0.3s;
}

.nav {
  margin-left: auto;
}

.nav-list {
  display: flex;
}

.nav-link {
  padding: 0 15px;
  font-size: 20px;
  line-height: 50px;
  text-decoration: none;
  letter-spacing: 0.1px;
}

.header-container {
  position: relative;
  z-index: 1;
  flex-direction: row;
  height: 90px;
}

.change-lang {
  padding: 0 16px 0 35px;
}

.lang {
  font-weight: bold;
  color: #ffffff;
  text-transform: uppercase;
  word-spacing: 4px;
  transition: 0.3s;
}

.header-container.light-theme .lang {
  color: #1c1c1c;
}

.header-container.light-theme .lang.active {
  color: #ffffff;
}

.header-container.light-theme .lang:hover,
.nav-link:hover,
.lang:hover,
.lang.active {
  color: #bdae82;
}

.lang.nonactive,
.lang.nonactive:hover {
  color: #ffffff;
  cursor: default;
}

.header-container.light-theme .lang.nonactive,
.header-container.light-theme .lang.nonactive:hover {
  color: #1c1c1c;
}

.change-theme {
  transition: 0.3s;
}

.dark-theme-icon,
.light-theme-icon {
  width: 45px;
  background-repeat: no-repeat;
  transition: 0.3s;
}

.dark-theme-icon {
  height: 45px;
  background-image: url("./assets/svg/sun.svg");
}

.light-theme-icon {
  height: 40px;
  background-image: url("./assets/svg/moon.svg");
}

.lang:hover,
.change-theme:hover {
  cursor: pointer;
}

@media (max-width: 768px) {
  .header-container {
    padding-right: 140px;
  }

  .nav {
    order: 1;
    margin-left: 0;
  }

  .lang {
    word-spacing: 10px;
  }

  .change-lang {
    margin-left: auto;
    padding-right: 30px;
  }
}

@media (max-width: 440px) {
  .change-lang {
    margin: 0 auto;
    padding: 0;
  }

  .lang {
    word-spacing: normal;
  }
}

@media (max-width: 425px) {
  .change-lang {
    margin: 0 auto;
    padding-left: 0;
  }

  .logo {
    width: 40px;
    height: 32px;
    background-size: 40px auto;
  }

  .header-container {
    height: 80px;
    padding-right: 34vw;
  }

  .change-theme {
    width: 40px;
    height: 40px;
    background-size: 40px auto;
  }
}

/* Adaptive menu */
.menu-toggle {
  display: none;
}
/* ... */

